[2단계 - 블랙잭 베팅] 듀이(이주희) 미션 제출합니다 (#865)
* refactor: Controller에서 수행하던 일부 도메인의 역할을 GameManager에게 위임

- 플레이어가 카드를 더 뽑아야 하는 지(shouldPlayerHit)

- 딜러가 카드를 더 뽑아야 하는 지(shouldDealerHit)

* docs: 베팅 기능 요구사항 추가

* feat: 딜러와 플레이어의 카드 두 장 숫자의 합이 21인지 확인

- 딜러가 처음 뽑은 두 장 중 한 장만 보여주는 것은 뷰에서 보여줄 지 여부를 정하는 것이 옳다고 생각하여 getInitialCards를 제거하고 뷰에서 getFirst 메서드를 사용하도록 수정

- 테스트에서 자료구조 List를 변수명으로 사용하던 것을 수정

* feat: 베팅 금액이 최소 금액 미만이면 예외 발생

* refactor: 참가자가 블랙잭일 때는 처음 카드 두 장일 때로 제한하도록 수정

* fix: 베팅 금액이 최소금액과 같을 때 테스트 추가 및 오류 수정

* feat: 플레이어의 베팅 금액 입력 받기 구현

- 입력값 String을 int로 변환 과정이 복잡하지 않다고 판단하여 InputValidator에서 변환과 검증을 한 번에 처리하도록 했습니다.

* refactor: 플레이어 생성 시 베팅 금액이 주입되도록 수정

* feat: 플레이어의 베팅 금액 계산 구현

* feat: 딜러와 플레이어의 최종 수익 출력 구현

* refactor: 간단한 for문 -> 스트림 변경, 카드숫자합 계산 시 정렬 보장

* refactor: 절대값 계산 로직 제거

* fix: 베팅 금액 equals & hashCode 재정의

* feat: 플레이어 이름을 중복하여 입력했을 때, 최대 플레이어 이름 개수를 초과하여 입력했을 때 예외 처리

* refactor: 메서드명 수정

* refactor: 플레이어가 카드를 뽑는 로직 controller -> manager 이동

* refactor: gameManager 내부에서 딜러가 카드를 뽑는 메서드 분리

* chore: 패키지명 오타 수정

* test: assertAll로 묶었던 케이스가 다른 테스트를 개별 테스트로 분리

* refactor: Dealer와 Players 타입 명시

- Participant로 반환하였지만 Dealer와 Player의 로직이 나뉘어져 있어 다형성을 활용하기보다 타입만 일치시킨 상태였으므로 타입을 분리하여 명시하는 것이 더 나은 선택이라고 판단하여 분리했습니다.

- Dealer와 Player의 타입을 분리하니 Participants 객체의 생성 이유를 찾지 못했습니다. 요구사항 중 인스턴스 변수 3개를 충족하지 못했지만 GameManager에서 Dealer와 Players를 관리하고 게임을 진행하도록 변경했습니다.

* refactor: Enum 컨벤션 수정

* refactor: 값 객체, 불변 객체 record로 변경

- Players는 가변 객체인 Player의 일급 컬렉션으로 불변 객체가 아니라고 판단했기 때문에 record로 변경하지 않았습니다.

* refactor: do-while문으로 indent 줄임

* style: 디미터 법칙 준수

* fix: 블랙잭이거나 21초과일 때 카드를 뽑을지 확인하지 않아야 되므로 로직 복귀

* refactor: Player 타입 명시로 Participant에 있던 getBettingAmount 메서드 제거

* refactor: while문 조건 메서드로 추출