@@ -5,12 +5,12 @@ import domain.card.Cards;
 import domain.participant.Dealer;
 import domain.participant.Participant;
 import domain.participant.ParticipantName;
-import domain.participant.Participants;
+import domain.participant.ParticipantNames;
 import domain.participant.Player;
+import domain.participant.Players;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class GameManager {
 
@@ -18,35 +18,58 @@ public class GameManager {
     private static final int DEFAULT_DRAW_SIZE = 1;
 
     private final CardProvider provider;
-    private final Participants participants;
+    private final Players players;
+    private final Dealer dealer;
 
-    public GameManager(List<String> playerNames, CardProvider provider) {
+    public GameManager(ParticipantNames playerNames, Map<ParticipantName, BettingAmount> bettingAmounts, CardProvider provider) {
         this.provider = provider;
-        this.participants = createParticipants(playerNames);
+        this.players = createPlayers(playerNames, bettingAmounts);
+        this.dealer = new Dealer(drawInitialCards());
     }
 
-    private Participants createParticipants(List<String> playerNames) {
-        List<Participant> participants = playerNames.stream()
-                .map(ParticipantName::new)
-                .map(name -> new Player(name, new Cards(provider.provideCards(INITIAL_DRAW_SIZE))))
-                .collect(Collectors.toList());
-        participants.add(new Dealer(new Cards(provider.provideCards(INITIAL_DRAW_SIZE))));
-        return new Participants(participants);
+    private Players createPlayers(ParticipantNames playerNames, Map<ParticipantName, BettingAmount> bettingAmounts) {
+        List<Player> players = playerNames.participantNames()
+                .stream()
+                .map(name -> {
+                    Cards cards = drawInitialCards();
+                    return new Player(name, bettingAmounts.get(name), cards);
+                }).toList();
+        return new Players(players);
     }
 
-    public Participant findDealer() {
-        return participants.findDealer();
+    private Cards drawInitialCards() {
+        return new Cards(provider.provideCards(INITIAL_DRAW_SIZE));
     }
 
-    public List<Participant> findPlayers() {
-        return participants.findPlayers();
+    public void drawCardForPlayer(Player player) {
+        drawCard(player);
     }
 
-    public void drawCard(Participant participant) {
+    private void drawCard(Participant participant) {
         participant.drawCard(provider.provideCards(DEFAULT_DRAW_SIZE));
     }
 
-    public Map<Participant, ResultStatus> findGameResult() {
-        return ResultStatus.judgeGameResult(participants);
+    public boolean shouldDealerHit() {
+        return dealer.shouldHit();
+    }
+
+    public void drawCardForDealer() {
+        drawCard(dealer);
+    }
+
+    public Map<Player, Integer> findPlayersProfits() {
+        return GameResult.calculateProfits(dealer, players);
+    }
+
+    public int findDealerProfit() {
+        return GameResult.calculateDealerProfits(dealer, players);
+    }
+
+    public Dealer getDealer() {
+        return dealer;
+    }
+
+    public List<Player> getPlayers() {
+        return players.getPlayers();
     }
 }
